0026063: GeomAPI_ExtremaCurveSurface have inexact API

Reason of exception was eliminated.

Test-case for issue #26063